| Summary: | ASTERISK-27066: res_pjsip: Add DTMF INFO Failback mode | ||
| Reporter: | Torrey Searle (tsearle) | Labels: | |
| Date Opened: | 2017-06-19 07:30:30 | Date Closed: | 2017-08-16 06:47:04 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip |
| Versions: | 13.15.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | the current "auto" mode defaults to inband if rfc 4733 fails to be negotiated. This patch introduces a new dtmf mode 'auto_info' that will fall back to INFO instead of inband | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-06-19 07:30:30.905-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||